--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,19 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Dependencies
 node_modules
+
+# Build
 dist
 dist-ssr
 *.local
@@ -23,9 +35,18 @@ dist-ssr
 *.sln
 *.sw?
 
-!node_modules/.vite
+# Environment
+.env
+.env.*
+!.env.example
 
+# Tempo
+!node_modules/.vite
 **/tempobook/dynamic/
 **/tempobook/storyboards/
-
 core
+
+# Build artifacts
+build
+.vercel
+.netlify
